--- a/src/global.css
+++ b/src/global.css
@@ -1,2 +1,10 @@
 /* scrollbar */
 @import 'simplebar-react/dist/simplebar.min.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+input {
+    -webkit-background-clip: text !important;
+    -webkit-box-shadow: none !important;
+}
